--- a/main/templates/admin/index.html
+++ b/main/templates/admin/index.html
@@ -3,7 +3,8 @@
 
 {% block extrastyle %}
 {{ block.super }}
-<link href="{{ STATIC_URL }}suit/extra_suit.css" rel="stylesheet" type="text/css">
+<link href="{{ STATIC_URL }}suit/extra_suit.css" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
 {% endblock %}
 
 {% block content %}
