functions to check the token and a middleware to insert it

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -103,6 +103,7 @@
     {% endcompress %}    
     <script src="https://cdn.jsdelivr.net/g/riot@2.0.14(riot.min.js+compiler.min.js)"></script>
     {% block extrajs %}{% endblock %}
+    <script src="{{ STATIC_URL }}js/jwt.js"></script>
     <script src="{{ STATIC_URL }}blog.js"></script>
     <script src="{{ STATIC_URL }}js/favico.js"></script>
     <script>
