--- a/main/templates/admin/index.html
+++ b/main/templates/admin/index.html
@@ -34,8 +34,10 @@
 <script src="{{ STATIC_URL }}js/init.js"></script>{#! TODO this is only here for cookies and I don't like it #}
 <script src="{{ STATIC_URL }}js/jwt.js"></script>
 <script src="{{ STATIC_URL }}js/admin_index.js"></script>
-<script src="{{ STATIC_URL }}tags/admin.tag" type="riot/tag"></script>
 <script src="https://cdn.jsdelivr.net/g/riot@2.0.14(riot.min.js+compiler.min.js)"></script>
+<script src="{{ STATIC_URL }}tags/admin.tag" type="riot/tag"></script>
+<script src="{{ STATIC_URL }}tags/auth.tag" type="riot/tag"></script>
+<script src="{{ STATIC_URL }}tags/input-fields.tag" type="riot/tag"></script>
 {% compress css %}
 <link type="text/less" rel="stylesheet" href="{{ STATIC_URL }}less/admin_index.less" />
 {% endcompress %}
