--- a/main/templates/admin/login.html
+++ b/main/templates/admin/login.html
@@ -1,25 +1,70 @@
-{% extends "suit:admin/login.html" %}
-{% load i18n admin_static suit_tags compress %}
+{% extends "admin/base_site.html" %}
+{% load i18n admin_static suit_tags %}
 {% load url from future %}
-{% block content %}
-<div id="content-main">
-  <h1><i class="icon-lock icon-white"></i> {{ 'ADMIN_NAME'|suit_conf }}</h1>
 
-  <login></login>
-</div>
-
+{% block extrastyle %}{{ block.super }}
+    {#    <link rel="stylesheet" type="text/css" href="{% static "admin/css/login.css" %}" />#}
 {% endblock %}
 
-{% block extrajs %}
-{{ block.super }}
-<script src="{{ STATIC_URL }}js/init.js"></script>{#! TODO this is only here for cookies and I don't like it #}
-<script src="{{ STATIC_URL }}js/jwt.js"></script>
-<script src="{{ STATIC_URL }}js/admin_index.js"></script>
-<script src="https://cdn.jsdelivr.net/g/riot@2.0.14(riot.min.js+compiler.min.js)"></script>
-<script src="{{ STATIC_URL }}tags/admin.tag" type="riot/tag"></script>
-<script src="{{ STATIC_URL }}tags/auth.tag" type="riot/tag"></script>
-<script src="{{ STATIC_URL }}tags/input-fields.tag" type="riot/tag"></script>
-{% compress css %}
-<link type="text/less" rel="stylesheet" href="{{ STATIC_URL }}less/admin_index.less" />
-{% endcompress %}
+{% block bodyclass %}login{% endblock %}
+
+{% block nav-global %}{% endblock %}
+
+{% block content_title %}{% endblock %}
+
+{% block breadcrumbs %}{% endblock %}
+
+{% block header %}{% endblock %}
+
+{% block content-left %}{% endblock %}
+
+{% block container %}
+
+    {% block content %}
+
+        {% if form.errors and not form.non_field_errors and not form.this_is_the_login_form.errors %}
+            <p class="errornote alert alert-error">
+                {% blocktrans count counter=form.errors.items|length %}Please correct the error below.{% plural %}Please correct the errors below.{% endblocktrans %}
+            </p>
+        {% endif %}
+
+        {% if form.non_field_errors or form.this_is_the_login_form.errors %}
+            {% for error in form.non_field_errors|add:form.this_is_the_login_form.errors %}
+                <p class="errornote alert alert-error">
+                    {{ error }}
+                </p>
+            {% endfor %}
+        {% endif %}
+
+        <div id="content-main">
+            <h1><i class="icon-lock icon-white"></i> {{ 'ADMIN_NAME'|suit_conf }}</h1>
+
+            <form action="{{ app_path }}" method="post" id="login-form"><div class="hide">{% csrf_token %}</div>
+                <div class="form-row control-group{% if not form.this_is_the_login_form.errors and form.username.errors %} error{% endif %}">
+                    <label for="id_username" class="control-label required">{{ form.username.label }}:</label> {{ form.username }}
+                  {% if not form.this_is_the_login_form.errors and form.username.errors %}<div class="help-block">{{ form.username.errors }}</div>{% endif %}
+                </div>
+                <div class="form-row control-group{% if not form.this_is_the_login_form.errors and form.password.errors %} error{% endif %}">
+                    <label for="id_password" class="control-label required">{% trans 'Password' %}:</label> {{ form.password }}
+                  {% if not form.this_is_the_login_form.errors and form.password.errors %}<div class="help-block">{{ form.password.errors }}</div>{% endif %}
+                    <input type="hidden" name="this_is_the_login_form" value="1"/>
+                    <input type="hidden" name="next"
+                           value="{% if next == "/admin/login" %}/admin/{% else %}{{ next }}{% endif %}"/>
+                </div>
+                {% url "password_reset" as password_reset_url %}
+                {% if password_reset_url %}
+                    <div class="password-reset-link">
+                        <a href="{{ password_reset_url }}">{% trans 'Forgotten your password or username?' %}</a>
+                    </div>
+                {% endif %}
+                <div class="submit-row">
+                    <input type="submit" value="{% trans 'Log in' %}" class="btn btn-info"/>
+                </div>
+            </form>
+
+            <script type="text/javascript">
+                document.getElementById('id_username').focus()
+            </script>
+        </div>
+    {% endblock %}
 {% endblock %}
