--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -101,7 +101,7 @@
     <script src="{{ STATIC_URL }}less/bootstrap/js/popover.js"></script>
     <script src="{{ STATIC_URL }}less/bootstrap/js/tab.js"></script>
     {% endcompress %}    
-    <script src="https://cdn.jsdelivr.net/g/riot@2.0.14(riot.min.js+compiler.min.js)"></script>
+    <script src="https://cdn.jsdelivr.net/g/riot@2.2(riot.min.js+compiler.min.js)"></div>
     {% block extrajs %}{% endblock %}
     <script src="{{ STATIC_URL }}js/jwt.js"></script>
     <script src="{{ STATIC_URL }}blog.js"></script>
