--- a/main/templates/_side.html
+++ b/main/templates/_side.html
@@ -1,3 +1,15 @@
+{% if not "artistsupportgrant" in request.path %}
+<section>
+  <h3 class="block_title">Artist Support Grant</h3>
+  <p>
+    The TX/RX Labs Artist Support Grant provides 6 months of access to the unique facilities
+    and training for which TX/RX Labs is already well known to Artists allowing them to
+    further develop their practice and technique.
+  </p>
+  <a class="btn btn-block btn-primary" href="/artistsupportgrant">Click here to learn more</a>
+</section>
+{% endif %}
+
 <section>
   <h3 class="block_title">About TXRX Labs</h3>
   <p>
