fixing admin comments and removing a few files

--- a/main/templates/admin/index.html
+++ b/main/templates/admin/index.html
@@ -34,7 +34,7 @@
 <script src="{{ STATIC_URL }}js/init.js"></script>{#! TODO this is only here for cookies and I don't like it #}
 <script src="{{ STATIC_URL }}js/jwt.js"></script>
 <script src="{{ STATIC_URL }}js/admin_index.js"></script>
-<script src="https://cdn.jsdelivr.net/g/riot@2.2(riot.min.js+compiler.min.js)"></div>
+<script src="https://cdn.jsdelivr.net/g/riot@2.2(riot.min.js+compiler.min.js)"></script>
 <script src="{{ STATIC_URL }}tags/admin.tag" type="riot/tag"></script>
 <script src="{{ STATIC_URL }}tags/auth.tag" type="riot/tag"></script>
 <script src="{{ STATIC_URL }}tags/input-fields.tag" type="riot/tag"></script>
