adding cancel button to modal

--- a/main/templates/admin/base.html
+++ b/main/templates/admin/base.html
@@ -7,7 +7,7 @@
 <a href="{{ docsroot }}">{% trans 'Documentation' %}</a>
 <span class="separator">|</span>
 {% endif %}
-<a href="javascript: void(0);" onclick="openPasswordChange()">{% trans 'Change yo password' %}</a>
+<a href="javascript: void(0);" onclick="openPasswordChange()">{% trans 'Change password' %}</a>
 <span class="separator">|</span>
 <a href="{% url 'admin:logout' %}">{% trans 'Log out' %}</a>
 <script>
