--- a/membership/templates/membership/analysis.html
+++ b/membership/templates/membership/analysis.html
@@ -16,9 +16,10 @@
   <div class="col-sm-6">
     <table class="table" style="text-align: center">
       <tr>
-        <td style="background-color:#ff8888">PAST DUE</td>
-        <td style="background-color:#88ffff">CANCELED</td>
-        <td style="background-color:#88ff88">SURPLUS DUES</td>
+        <td class="alert alert-success">ALL GOOD</td>
+        <td class="alert alert-danger">PAST DUE</td>
+        <td class="alert alert-info">CANCELED</td>
+        <td class="alert alert-warning">HAS FLAG</td>
       </tr>
     </table>
   </div>
@@ -33,7 +34,7 @@
 </ul>
 
 <div class="tab-content">
-  {% for level,users in levels %}
+  {% for level,users in level_users %}
   <div role="tabpanel" class="tab-pane {% if forloop.first %}active{% endif %}" id="{{ level.name|slugify }}">
     <table class="table table-striped">
       <tr>
@@ -51,7 +52,7 @@
         <td>{{ user.enrollment_set.count }}</td>
         <td>
           {% for subscription in user.usermembership.all_subscriptions %}
-          <div style="background: {{ subscription.bg }}">
+          <div class="alert-{{ subscription.bs_class }}">
             <a href="/admin/membership/subscription/{{ subscription.pk }}/" class="fa fa-edit"></a>
             <a href="https://mail.google.com/mail/u/0/#search/{{ subscription.subscr_id }}" class="fa fa-search"></a>
             {{ subscription.subscr_id }}
