adding instagram to nav and sidebar

--- a/main/templates/sides/_contact_us.html
+++ b/main/templates/sides/_contact_us.html
@@ -20,6 +20,7 @@
     <li><b>Social/Online</b></li>
     <li><a href="https://www.facebook.com/TxRxLabs">Facebook</a></li>
     <li><a href="https://twitter.com/txrxlabs">Twitter</a></li>
+    <li><a href="https://instagram.com/txrxlabs/">Instagram</a></li>
     <li><a href="http://www.meetup.com/TXRXLabs/">Meetup.com</a></li>
     <li><a href="https://groups.google.com/forum/#!forum/txrxlabs">Google Groups (Public)</a></li>
     <li><a href="https://groups.google.com/forum/#!forum/txrxmembership">Google Groups (Members)</a></li>
