--- a/course/templates/course/index.html
+++ b/course/templates/course/index.html
@@ -6,6 +6,7 @@
 
 {% block extrajs %}
 <script src="{{ STATIC_URL }}classes.json?v={% now "ymd_his" %}"></script>
+<script src="{{ STATIC_URL }}sessions.json?v={% now "ymd_his" %}"></script>
 <script src="{{ STATIC_URL }}tags/course.tag" type="riot/tag"></script>
 <script src="{{ STATIC_URL }}js/course.js?v2"></script>
 <script>
