--- a/course/templates/course/instructor_session.html
+++ b/course/templates/course/instructor_session.html
@@ -73,10 +73,7 @@
       <p>
         <input type="checkbox" name="completed"{% if enrollment.completed %}
                checked="checked"{% endif %} value="{{ enrollment.id }}"/>
-        {{ enrollment.user }}
-        {% if enrollment.user.first_name or enrollment.user.last_name %}
-        ({{ enrollment.user.first_name }} {{ enrollment.user.last_name }})
-        {% endif %}
+        {{ enrollment.user.email }}
       </p>
       {% endfor %}
       <input type="submit" value="Update" />
