minor changes to permission admin options

--- a/main/templates/admin/base.html
+++ b/main/templates/admin/base.html
@@ -1,4 +1,4 @@
-{% extends "suit:admin/base.html" %}
+{% extends "lablackey:admin/base.html" %}
 {% load admin_static suit_tags i18n %}
 
 {% block userlinks %}
