adding user.json and restyling the permissions badge page

--- a/main/static/less/base.less
+++ b/main/static/less/base.less
@@ -15,6 +15,7 @@
 @import "tool.less";
 @import "calendar.less";
 @import "course.less";
+@import "permission.less";
 
 @import "cart.less";
 @import "comment.less";
