--- a/tool/templates/criterion/my_permissions.html
+++ b/tool/templates/criterion/my_permissions.html
@@ -6,8 +6,9 @@
 
 {% block extrajs %}
 <script type="riot/tag" src="{{ STATIC_URL }}tags/tool.tag"></script>
+<script src="/user.json"></script>
 <script>
   var columns = {{ columns|safe }};
-  riot.mount("badge")
+  riot.mount("badge",{columns: columns})
 </script>
 {% endblock %}
