adding bootstrap.css because compiling less was adding a second to the server time

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -125,7 +125,7 @@
       })();
 
     </script>
-    {% block extra_body %}
-    {% endblock %}
+    {% block extra_body %}{% endblock %}
+    {% include "_sql_queries.html" %}
   </body>
 </html>
