--- a/main/templates/_styles.html
+++ b/main/templates/_styles.html
@@ -1,8 +1,8 @@
 {% load compress %}
 {% compress css %}
+<link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}wmd/wmd.css">
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}less/blog.css">
-<link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/bootstrap/less/bootstrap.less">
 <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/base.less">
 {% endcompress %}
 
