--- a/tool/templates/criterion/index.html
+++ b/tool/templates/criterion/index.html
@@ -6,8 +6,10 @@
   <div>
     <h2>{{ permission }}</h2>
     <ul>
-      {% for criteria,can_grant in criteria_tuples %}
-      <li>{{ criteria }} - {{ can_grant }}</li>
+      {% for criteria in criteria_tuples %}
+      <li>
+        <a href="{% url "criterion_detail" criteria.pk %}">{{ criteria }}</a>
+      </li>
       {% endfor %}
     </ul>
   </div>
