more styling and functionality on the criterion assignment page

--- a/main/static/less/permission.less
+++ b/main/static/less/permission.less
@@ -23,3 +23,9 @@ badge {
     &:last-child { margin-bottom: 0; }
   }
 }
+
+authorize-button {
+  .alert { display: block; }
+  .fa-4x { line-height: 0.75 }
+  .row { cursor: pointer; }
+}
