--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -88,9 +88,6 @@
       {% endblock %}
     </div>
     <script src="https://cdn.jsdelivr.net/g/riot@2.2(riot.min.js+compiler.min.js)"></script>
-    <script type="riot/tag" src="{{ STATIC_URL }}tags/checkin.tag"></script>
-    <script type="riot/tag" src="{{ STATIC_URL }}tags/tool.tag"></script>
-    <script type="riot/tag" src="{{ STATIC_URL }}tags/modal.tag"></script>
     {% compress js %}
     <script src="{{ STATIC_URL }}less/bootstrap/js/affix.js"></script>
     <script src="{{ STATIC_URL }}less/bootstrap/js/button.js"></script>
@@ -104,18 +101,12 @@
     <script src="{{ STATIC_URL }}less/bootstrap/js/tooltip.js"></script>
     <script src="{{ STATIC_URL }}less/bootstrap/js/popover.js"></script>
     <script src="{{ STATIC_URL }}less/bootstrap/js/tab.js"></script>
-    <script src="{{ STATIC_URL }}js/unrest.js"></script>
-    <script src="{{ STATIC_URL }}js/router.js"></script>
     {% endcompress %}
     {% block extrajs %}{% endblock %}
-    <script src="/user.json?v={% now "ymd_his" %}"></script>
-    <script src="{{ STATIC_URL }}tools.json?v={% now "ymd_h" %}"></script>
-    <script src="{{ STATIC_URL }}js/jwt.js"></script>
     <script src="{{ STATIC_URL }}blog.js"></script>
     <script src="{{ STATIC_URL }}js/favico.js"></script>
     <script>
-      var f = new Favico({animation : 'popFade'});
-      f.badge({{ pending_evaluations.count }});
+      new Favico({animation : 'popFade'}).badge({{ pending_evaluations.count }});
     </script>
     <script src="{{ STATIC_URL }}cv/float.js"></script>
     <script>
