creating enrollment checkout and criteria checkout columns

--- a/main/static/less/permission.less
+++ b/main/static/less/permission.less
@@ -39,7 +39,7 @@ checkbox {
   }
 }
 
-tool-checkout,search-criterion {
+tool-checkout,search-users {
   display: block;
   max-width: 400px;
   .btn { margin-bottom: 15px; }
