--- a/main/static/less/permission.less
+++ b/main/static/less/permission.less
@@ -31,10 +31,11 @@ checkbox {
     display: block;
     padding-left: 60px;
     position: relative;
+    &.alert-warning { cursor: disabled; }
     .fa-3x {
       left: 5px;
       position: absolute;
-      top: 5px;
+      top: 0;
     }
   }
 }
@@ -43,6 +44,7 @@ tool-checkout,search-users {
   display: block;
   max-width: 400px;
   .btn { margin-bottom: 15px; }
+  a { cursor: pointer }
 }
 
 [ur-loading] {
