contact emails now includes name in subject and the submit button goes disabled so it cant be pressed multiple times

--- a/main/static/less/txrx.less
+++ b/main/static/less/txrx.less
@@ -457,3 +457,6 @@ ul.errorlist { color: red; }
   }
   [name=room_selector] { display:none; }
 }
+
+#contact_form.sending:after {  content: "Sending ..."; }
+    
