--- a/main/static/less/permission.less
+++ b/main/static/less/permission.less
@@ -43,15 +43,19 @@ checkbox {
 tool-checkout,search-users {
   display: block;
   max-width: 400px;
-  .btn { margin-bottom: 15px; }
+  .btn {
+    margin-bottom: 15px;
+    &:focus { outline: 0; }
+  }
   a { cursor: pointer }
 }
 
 [ur-loading] {
   position: relative;
   &:before {
-    background: rgba(0,0,0,0.5);
+    background: rgba(192,192,192,0.5);
     bottom: 0;
+    box-shadow: inset 0 0 50px #888;
     content: "";
     display: block;
     left: 0;
