--- a/course/templates/course/instructor_session.html
+++ b/course/templates/course/instructor_session.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Instructor: {{ session.course }}{% endblock %}
+{% block title %}Instructor: {{ session }}{% endblock %}
 
 {% block main %}
 <div class="col-sm-12">
-  <h1 class="page-title">{{ session.course.name }}</h1>
+  <h1 class="page-title">{{ session }}</h1>
 </div>
 <div class="col-sm-12">
   <div class="well">
