adding new poll function

--- a/main/static/less/base.less
+++ b/main/static/less/base.less
@@ -16,6 +16,7 @@
 @import "calendar.less";
 @import "course.less";
 @import "permission.less";
+@import "poll.less";
 
 @import "cart.less";
 @import "comment.less";
