--- a/main/templates/beta.html
+++ b/main/templates/beta.html
@@ -6,6 +6,7 @@
 <script type="riot/tag" src="{{ STATIC_URL }}tags/checkin.tag"></script>
 <script type="riot/tag" src="{{ STATIC_URL }}tags/tool.tag"></script>
 <script type="riot/tag" src="{{ STATIC_URL }}tags/modal.tag"></script>
+<script type="riot/tag" src="{{ STATIC_URL }}tags/poll.tag"></script>
 <script src="{{ STATIC_URL }}js/unrest.js"></script>
 <script src="/user.json?v={% now "ymd_his" %}"></script>
 <script src="{{ STATIC_URL }}tools.json?v={% now "ymd_h" %}"></script>
