greying out disabled submit button

--- a/main/static/less/txrx.less
+++ b/main/static/less/txrx.less
@@ -475,3 +475,8 @@ ul.errorlist { color: red; }
   [for=id__signature] { position: absolute; }
   [type=text] { width: 250px; }
 }
+
+.grayscale-me {
+  -webkit-filter: grayscale(1);
+  filter: grayscale(1);
+}
