--- a/membership/templates/membership/memberships.html
+++ b/membership/templates/membership/memberships.html
@@ -63,6 +63,7 @@ function setHiddenFields(that) {
         <div class="button_box">
           <input type="image" name="submit" alt="PayPal - The safer, easier way to pay online!"
                  {% if "Table Hacker" in m.name and not "open" in request.GET %} onclick="tHackerAlert();return false;"
+                 class="grayscale-me"
                  {% endif %} src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribe_LG.gif">
           <img src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" alt="" width="1" height="1" border="0">
         </div>
