tagline setting replacing some hardcoded text

--- a/main/templates/flatpages/about-us.html
+++ b/main/templates/flatpages/about-us.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div id="flatpage">
-  <h3 class="block_title">Houston's Hackerspace - 205 Roberts St. Houston, TX 77003</h3>
+  <h3 class="block_title">{{ SITE_TAGLINE }} - 205 Roberts St. Houston, TX 77003</h3>
   <div class="well">
     <p>TX/RX is a non-profit Hackerspace in Houston, Texas offering classes, lab space, and our collective knowledge to help you launch your ideas and projects. We are a project based group of makers, inventors, tinkerers, artists, crafters, and coders. We are housed in a 30,000 square foot facility which includes a rapid fabrication lab, electronics lab, metal fabrication shop, wood workshop, machine shop, bike maintenance and repair shop, art lab, computer lab and coworking space.</p>
   </div>
