--- a/main/templates/footer.html
+++ b/main/templates/footer.html
@@ -1,4 +1,4 @@
-<div class="left">TXRX Labs - {{ SITE_TAGLINE }}</div>
+<div class="left">{{ SITE_NAME }} - {{ SITE_TAGLINE }}</div>
 <div class="center">
   <a href="https://goo.gl/maps/xD5ST">205 Roberts Street, Houston, TX</a>
 </div>
