--- a/main/templates/registration/password_reset_email.html
+++ b/main/templates/registration/password_reset_email.html
@@ -1,5 +1,5 @@
 {% load i18n %}{% autoescape off %}
-{% trans "Welcome to TXRX Labs. You're receiving this email because your password has been reset." %}
+{% trans "Welcome to {{ SITE_NAME }}. You're receiving this email because your password has been reset." %}
 
 {% trans "Please go to the following page and choose a new password:" %}
 {% block reset_link %}
