--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -6,7 +6,7 @@
 {% block header_content %}Latest {{ post_type }} by {{ username }}{% endblock %}
 
 {% block extra_head %}
-{#! this should be added back in. Removed 9/6/2014 <link rel="alternate" type="application/rss+xml" href="{% url "posts_feed" username %}" title="TXRX Labs: Posts by {{ username }}">#}
+{#! this should be added back in. Removed 9/6/2014 <link rel="alternate" type="application/rss+xml" href="{% url "posts_feed" username %}" title="{{ SITE_NAME }}: Posts by {{ username }}">#}
 {% endblock %}
 
 
