--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -5,7 +5,7 @@
 {% block title %}{{ course }}{% endblock %}
 {% block header %}{% endblock %}
 
-{% block fb_title %}{{ course }} at TXRX Labs{% endblock %}
+{% block fb_title %}{{ course }} at {{ SITE_NAME }}{% endblock %}
 {% block fb_description %}{{ course.description|implosivo|escape }}{% endblock %}
 
 {% block main %}
