--- a/main/templates/_side.html
+++ b/main/templates/_side.html
@@ -11,7 +11,7 @@
 {% endif %}
 
 <section>
-  <h3 class="block_title">About TXRX Labs</h3>
+  <h3 class="block_title">About {{ SITE_NAME }}</h3>
   <p>
     Established in 2008, TXRX Labs is a non-profit hackerspace for the greater Houston area.
     Housed in the East End District, we offer courses in and access to our rapid prototyping lab,
@@ -23,7 +23,7 @@
     <input type="hidden" name="cmd" value="_donations">
     <input type="hidden" name="business" value="txrxlabs@gmail.com">
     <input type="hidden" name="lc" value="US">
-    <input type="hidden" name="item_name" value="TXRX Labs">
+    <input type="hidden" name="item_name" value="{{ SITE_NAME }}">
     <input type="hidden" name="item_number" value="side-button">
     <input type="hidden" name="no_note" value="0">
     <input type="hidden" name="currency_code" value="USD">
