--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -35,7 +35,7 @@
     <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}lightbox/css/lightbox.css" />
     <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}cv/float.css" />
     {% block head %}{% endblock %}
-    <meta property="og:title" content="{% block fb_title %}TXRX Labs: {{ SITE_TAGLINE }}{% endblock %}" />
+    <meta property="og:title" content="{% block fb_title %}{{ SITE_NAME }}: {{ SITE_TAGLINE }}{% endblock %}" />
     <meta property="og:site_name" content="{{ SITE_NAME }}" />
     <meta property="og:url" content="{{ request.build_absolute_uri }}" />
     <meta property="og:description" content="{% block fb_description %}TXRX Labs is Houston's nonprofit Hackerspace. Since 2008, TX/RX has aimed to provide a communal space for the public to learn and create. Located in the East End and serving the greater Houston area, TX/RX offers members use of 30,000 square feet of work space including a wood shop, metal shop, bike shop, rapid fabrication lab, electronics lab, art lab, computer lab, and coworking space. A diverse series of classes are taught with the goal of making seemingly complex skills attainable to anyone. By creating an open environment to share knowledge, collaborate, and build, TX/RX has become the home for 250 thinkers, tinkerers, hackers, artists, crafters, coders, and makers.{% endblock %}" />
