--- a/main/templates/survey.html
+++ b/main/templates/survey.html
@@ -10,7 +10,7 @@
   h1 { margin: 0.3em 0; font-size: 1.5em; }
 </style>
 <h1 class="ss-form-title">TXRX New Member Questionaire</h1>
-Please fill this form out to complete your membership @ TXRX Labs. This form will be used to help let you know about events and projects at the lab that may be of interest to you.
+Please fill this form out to complete your membership @ {{ SITE_NAME }}. This form will be used to help let you know about events and projects at the lab that may be of interest to you.
 <br />
 <form method="POST">
   {% csrf_token %}
