--- a/membership/templates/membership/minutes_index.html
+++ b/membership/templates/membership/minutes_index.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <p class="lead">
-  TXRX Labs holds quarterly member meetings the last Sunday of every January, April, July, and October. Meetings are not open to the general public. All members are welcome to attend, but only voting members can vote on new policy.
+  {{ SITE_NAME }} holds quarterly member meetings the last Sunday of every January, April, July, and October. Meetings are not open to the general public. All members are welcome to attend, but only voting members can vote on new policy.
 </p>
 <ul>
   {% for minutes in minutes_set %}
