--- a/main/templates/_side.html
+++ b/main/templates/_side.html
@@ -2,7 +2,7 @@
 <section>
   <h3 class="block_title">Artist Support Grant</h3>
   <p>
-    The TX/RX Labs Artist Support Grant provides 6 months of access to the unique facilities
+    The {{ SITE_NAME }} Artist Support Grant provides 6 months of access to the unique facilities
     and training for which TX/RX Labs is already well known to Artists allowing them to
     further develop their practice and technique.
   </p>
@@ -13,7 +13,7 @@
 <section>
   <h3 class="block_title">About {{ SITE_NAME }}</h3>
   <p>
-    Established in 2008, TXRX Labs is a non-profit hackerspace for the greater Houston area.
+    Established in 2008, {{ SITE_NAME }} is a non-profit hackerspace for the greater Houston area.
     Housed in the East End District, we offer courses in and access to our rapid prototyping lab,
     woodshop, machineshop, electronics lab, and a wide variety of other tools. Our goal is to
     educate the public about technology and show how seemingly complex techniques can be used
@@ -37,7 +37,7 @@
 </section>
 
 <section class="events_box">
-  <h3 class="block_title">This Week at TXRX</h3>
+  <h3 class="block_title">This Week at {{ SITE_NAME }}</h3>
   <ul class="list-unstyled">
     {% for event in upcoming_events %}
     <li>
