--- a/main/static/less/course.less
+++ b/main/static/less/course.less
@@ -84,7 +84,7 @@
   }
 }
 
-.SessionList {
+.SessionList, event-list {
   position: relative;
   .fee {
     border-color: transparent;
@@ -92,7 +92,8 @@
     right: 0;
     top: -54px;
   }
-  .session {
+  .session,event-occurrence {
+    display: block;
     margin-bottom: 10px;
     position: relative;
     text-align: center;
