not sure what is happening

--- a/blog/templates/blog/posts_by_tag.html
+++ b/blog/templates/blog/posts_by_tag.html
@@ -3,7 +3,7 @@
 
 {% block header_content %}Posts Tagged {{ tag.name }}{% endblock %}
 {% block extra_head %}
-<link rel="alternate" type="application/rss+xml" href="{{ request.path }}" title="TXRX Labs: Posts Tagged {{ tag.name }}" />
+<link rel="alternate" type="application/rss+xml" href="{{ request.path }}" title="TX/RX Labs: Posts Tagged {{ tag.name }}" />
 {% endblock %}
 
 {% block content %}
