--- a/course/templates/course/_add_to_calendar.html
+++ b/course/templates/course/_add_to_calendar.html
@@ -25,7 +25,7 @@
               "My Classes" Calendar</a></li>
           {% endif %}
           <li><a href="{{ protocol }}{{ all_classes_ics }}" target="_blank">
-              TXRX Classes Calendar</a></li>
+              TX/RX Classes Calendar</a></li>
         </ul>
         {% else %}
         <ul>
@@ -38,7 +38,7 @@
               All "{{ calendar_event.short_name }}" events</a></li>
           {% endif %}
           <li><a href="{{ protocol }}{{ all_ics }}" target="_blank">
-              TXRX Events Calendar
+              TX/RX Events Calendar
           </a></li>
         </ul>
         {% endif %}
