--- a/event/templates/event/index.html
+++ b/event/templates/event/index.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
-{% block full_title %}Events at TXRX{% endblock %}
+{% block full_title %}Events at TX/RX{% endblock %}
 {% block header_content %}
-Events at TXRX
+Events at TX/RX
 {% endblock %}
 
 {% block main %}
