--- a/main/templates/_side.html
+++ b/main/templates/_side.html
@@ -3,7 +3,7 @@
   <h3 class="block_title">Artist Support Grant</h3>
   <p>
     The {{ SITE_NAME }} Artist Support Grant provides 6 months of access to the unique facilities
-    and training for which TXRX Labs is already well known to Artists allowing them to
+    and training for which TX/RX Labs is already well known to Artists allowing them to
     further develop their practice and technique.
   </p>
   <a class="btn btn-block btn-primary" href="/artistsupportgrant">Click here to learn more</a>
