--- a/membership/templates/membership/memberships.html
+++ b/membership/templates/membership/memberships.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
-{% block header_content %}Become a Member of TXRX Labs{% endblock %}
-{% block full_title %}Become a Member of TXRX Labs{% endblock %}
+{% block header_content %}Become a Member of TX/RX Labs{% endblock %}
+{% block full_title %}Become a Member of TX/RX Labs{% endblock %}
 
 {% block main %}
 <script type="text/javascript">
