--- a/membership/templates/membership/officers.html
+++ b/membership/templates/membership/officers.html
@@ -2,7 +2,7 @@
 {% load thumbnail %}
 
 {% block full_title %}Officers{% endblock %}
-{% block header_content %}TXRX Labs - Officers{% endblock %}
+{% block header_content %}TX/RX Labs - Officers{% endblock %}
 
 {% block content %}
 {% for officer in officers %}
