--- a/tool/templates/tool/lab_index.html
+++ b/tool/templates/tool/lab_index.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% load thumbnail crop_util %}
 
-{% block header_content %}Tools and Equipment at TXRX Labs{% endblock %}
-{% block full_title %}Tools and Equipment at TXRX Labs{% endblock %}
+{% block header_content %}Tools and Equipment at TX/RX Labs{% endblock %}
+{% block full_title %}Tools and Equipment at TX/RX Labs{% endblock %}
 
 {% block main %}
 <div id="labs" class="row">
