tying in generic tool criterion into riot views

--- a/main/templates/registration/_login_form.html
+++ b/main/templates/registration/_login_form.html
@@ -1,4 +1,4 @@
-<form action="/accounts/login/" method="post" id="login-form" class="cvfloat">
+<form method="POST" id="login-form" class="cvfloat">
   {% csrf_token %}
   {% if form.errors %}<p class="error">Username and password did not match.</p>{% endif %}
   <div class="form-group">
