--- a/store/templates/store/receipts.html
+++ b/store/templates/store/receipts.html
@@ -12,7 +12,7 @@
       <input name="pk" value="{{ order.pk }}" type="hidden">
       <button class="btn btn-success pull-right">Mark Delivered</button>
     </form>
-    <b>Order #{{ order.pk }} - {{ order.user }}</b>
+    <b>Order #{{ order.pk }} - {{ order.user }}<br/> {{ order.created|date:"m/d@P" }}</b>
     <ul>
       {% for item in order.items.all %}
       <li><b>{{ item.quantity }}x</b> {{item.product }}</li>
@@ -30,7 +30,7 @@
       <input name="pk" value="{{ order.pk }}" type="hidden">
       <button class="btn btn-success pull-right">Mark Outstanding</button>
     </form>
-    <b>Order #{{ order.pk }}</b>
+    <b>Order #{{ order.pk }} - {{ order.user }}<br/> {{ order.created|date:"m/d@P" }}</b>
     <ul>
       {% for item in order.items.all %}
       <li><b>{{ item.quantity }}x</b> {{item.product }}</li>
