fixing broken event detail page

--- a/event/templates/event/detail.html
+++ b/event/templates/event/detail.html
@@ -30,7 +30,7 @@
 $(function() {
   var user_reservations = {{ rsvps_json|safe }};
   $.get(
-    "/api/event/eventdetail/{{ event.pk }}/",
+    "/event/eventdetail_{{ event.pk }}.json",
     function(data) {
       data.user_reservations = user_reservations;
       data.occurrences = data.upcoming_occurrences;
