--- a/main/static/less/txrx.less
+++ b/main/static/less/txrx.less
@@ -96,14 +96,16 @@ h3.block_title {
     padding: 15px 20px;
     text-align: left; 
     width: 350px;
+    h2 { margin-bottom: 10px; }
     .membership_features {
-      height: 180px;
+      min-height: 180px;
       list-style: none;
       margin: 0;
-      padding: 10px 0;
+      padding: 0;
     }
     .membership_features li {
       padding-bottom: 10px;
+      &:last-child { padding: 0; }
     }
   }
   .button_box { padding-top: 15px; }
