--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -102,7 +102,7 @@
     <script src="{{ STATIC_URL }}less/bootstrap/js/tooltip.js"></script>
     <script src="{{ STATIC_URL }}less/bootstrap/js/popover.js"></script>
     <script src="{{ STATIC_URL }}less/bootstrap/js/tab.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/date-en-US.js"></script> {# date formatting #}
+    <script type="text/javascript" src="{{ STATIC_URL }}js/moment.js"></script> {# date formatting #}
     {% endcompress %}
     {% block extrajs %}{% endblock %}
     <script src="{{ STATIC_URL }}blog.js"></script>
